--- a/Final_v1.0/css/style.css
+++ b/Final_v1.0/css/style.css
@@ -19,8 +19,8 @@ a:hover{
 }
 .content {
     margin: 0 auto;
-    padding: 0 10px;
-    max-width: 1130px;
+    padding: 0 15px;
+    max-width: 1170px;
 }
 p{
     padding: 5px 0;
@@ -57,14 +57,14 @@ header .nav {
 header .nav li {
     float: left;
 }
-header .nav li a:hover {
-    background-color: red;
-    color: #fff;
-}
 header .nav li a {
     text-transform: uppercase;
     padding: 25px 17px;
     font-size: 13px;
+}
+header .nav li a:hover {
+    background-color: red;
+    color: #fff;
 }
 /*==========================================================================*/
 .banner {
@@ -143,7 +143,7 @@ header .nav li a {
     float: right;
 }
 .box .skills li {
-    padding: 20px 0;
+    margin-bottom: 20px;
     clear: both;
 }
 .box .skills .name {
@@ -151,6 +151,7 @@ header .nav li a {
 }
 .box .skills li .percent {
     float: left;
+    width: 10%;
 }
 .box .skills li .line {
     background-color: #E7E7E7;
@@ -158,7 +159,6 @@ header .nav li a {
     height: 20px;
     float: left;
     margin-top: 5px;
-    margin-left: 10px
 }
 .box .skills li .line .color-line {
     height: 100%;
@@ -167,7 +167,7 @@ header .nav li a {
     float: left;
 }
 /*==========================================================================*/
-.bg {
+.projects {
     background: url('../images/gry-patt.png') #eee;
     padding: 100px 0;
 }
@@ -201,8 +201,7 @@ header .nav li a {
 .projects .filterbox li {
     float: left;
     width: 30%;
-    margin-right: 5%;
-    margin-bottom: 20px;
+    margin:0 5% 20px 0;
 }
 .projects .filterbox li:nth-child(3n){
     margin-right: 0;
@@ -213,8 +212,6 @@ header .nav li a {
 .projects .filterbox li a h3 {
     text-align: center;
     color: #e7512f;
-    display: table;
-    margin: auto;
     font-weight: 700;
     font-size: 16px;
 }
@@ -265,10 +262,6 @@ header .nav li a {
     background-color: #fff;
 }
 /*==========================================================================*/
-.service-box li i.fa-icon:hover {
-    background-color: #e7512f;
-    color: #fff;
-}
 .service-box li {
     float: left;
     width: 25%;
@@ -283,10 +276,13 @@ header .nav li a {
 }
 .service-box i {
     display: table; 
-    margin: 0 auto;
-    margin-bottom: 20px;
+    margin: 0 auto 20px;
 }
-.service-box i.fa-icon:before {
+.service-box li i.fa-icon:hover {
+    background-color: #e7512f;
+    color: #fff;
+}
+.service-box i:before {
     content: '\f06c';
     font-family: 'FontAwesome';
     color: #f00;
@@ -296,6 +292,10 @@ header .nav li a {
     border-radius: 50%;
     font-size: 35px;
 }
+.service-box li:hover i:before {
+    color: #fff;
+    border-color: #fff;
+}
 .service-box h3 {
     margin: 0 0 10px;
     padding: 0 15px 10px;
@@ -304,6 +304,9 @@ header .nav li a {
     color: #777;
     font-weight: 800;
     text-transform: uppercase;
+}
+.service-box li:hover h3 {
+    color: #fff;
 }
 .service-box p {
     padding: 0 15px;
@@ -325,9 +328,6 @@ header .nav li a {
 .pricing p {
     text-align: center;
     margin: 20px 5px 50px;
-}
-.pricing .wrap-box {
-    width: 100%;
 }
 .pricing .wrap-box .pricing-table {
     float: left;
@@ -496,13 +496,12 @@ header .nav li a {
 }
 /*==========================================================================*/
 .get-in .map {
-    border: 1px solid black;
     float: right;
     width: 50%;
-    background-color: red;
 }
 #map-canvas {
     height: 450px;
+    margin-left: 20px;
 }
 /*==========================================================================*/
 footer {
@@ -672,6 +671,7 @@ footer .action {
     font-family: 'FontAwesome';
     content: "\f167";
 }
+/*==========================================================================*/
 @media (max-width: 719px){
     .service-box li {
         width:50%;
