--- a/Final_v1.0/css/style.css
+++ b/Final_v1.0/css/style.css
@@ -190,45 +190,45 @@ header .nav li a:hover {
 .projects {
     background: url('../images/gry-patt.png') #eee;
     padding: 100px 0;
-}
-.projects {
     position: relative;
 }
 .projects .note {
     position: absolute;
+    margin-top: 12px;
 }
 .projects .filterbtn {
     display: table;
-    margin: 0 auto;
-}
-.projects .filterbtn li a {
-    text-transform: uppercase;
-    padding: 10px 10px;
-    display: inline-table;
-    background-color: #777;
-    margin: 0 1px;
-    color: #fff; 
+    margin: 0 auto 20px;
 }
 .projects .filterbtn li {
     float: left;
+    margin-right: 2px;
+}
+.projects .filterbtn li a {
+    text-transform: uppercase;
+    padding: 10px;
+    display: inline-block;
+    background-color: #777;
+    color: #fff; 
 }
 .projects .filterbtn li a:hover {
     background-color: #e7512f;
-    color: #fff; 
 }
 .projects .filterbox {
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 .projects .filterbox li {
     float: left;
-    width: 30%;
-    margin:0 5% 20px 0;
-}
-.projects .filterbox li:nth-child(3n){
-    margin-right: 0;
+    width: 33.3%;
+    margin-bottom: 20px;
+    padding: 0 1%;
+    box-sizing: border-box;
 }
 .projects .filterbox li img {
     max-width: 100%;
+}
+.projects .filterbox li a {
+    margin-bottom: 5px;
 }
 .projects .filterbox li a h3 {
     text-align: center;
@@ -237,11 +237,10 @@ header .nav li a:hover {
     font-size: 16px;
 }
 .projects .filterbox li span {
-    display: table;
-    margin: 0 auto;
+    display: block;
+    text-align: center;   
     color: #e7512f;
     font-size: 12px;
-    margin-top: 5px;
 }
 .projects input {
     background-color: red;
