--- a/Final_v1.0/css/style.css
+++ b/Final_v1.0/css/style.css
@@ -234,7 +234,6 @@ header .nav li a:hover {
     text-align: center;
     color: #e7512f;
     font-weight: 700;
-    font-size: 16px;
 }
 .projects .filterbox li span {
     display: block;
@@ -259,26 +258,27 @@ header .nav li a:hover {
     padding: 100px 0;
     background-size: cover;
 }
+.team .title {
+    margin-bottom: 30px;
+}
 .team p {
     text-align: center;
-    margin: 30px auto;
+    margin: 0 auto 30px;
 }
 .team .team-img li {
     float: left;
-    width: 24%;
-    margin-right: 1.33%;
-}
-.team .team-img li:last-child {
-    margin-right: 0;
+    width: 25%;
+    padding: 0 1%;
+    box-sizing: border-box;
 }
 .team .team-img li img {
     max-width: 100%;
+    display: block;
 }
 .team .team-img li h3 {
     padding: 7px 0;
     text-align: center;
     font-size: 14px;
-    margin-top: -5px;
     background-color: #fff;
 }
 /*==========================================================================*/
