--- a/Final_v1.0/css/style.css
+++ b/Final_v1.0/css/style.css
@@ -49,7 +49,7 @@ header .logo {
     background-image: url('../images/logo.png');
     height: 40px;
     width: 200px;
-    display: block;
+    display: inline-block;
     float: left;
 }
 header .nav {
@@ -724,24 +724,5 @@ footer .footerbottom .socialmedia li a:hover {
         width:100%;
         float:none;
     }
-}
-/*==========================================================================*/
-/*==========================================================================*/
-.tasks{
-    background-image: url('../images/bg-image.jpg');
-}
-.tasks .task-box {
-    width: 48%;
-    box-sizing: border-box;
-    float: left;
-    margin: 20px 1%;
-    border: 1px solid #000;
-    background-color: #585858;
-    height: 250px;
-    
-}
-.tasks .task-box span {
-    display: block;
-    text-align: center;
 }
 
